<resources>
    <string name="app_name">MVP</string>
    <string name="verify_code">Verify Code</string>
    <string name="otp_description_text">"Enter one time code sent to your number "</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_credentials"> Forgot Password</string>
    <string name="discard"><u>Discard &amp; login</u></string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="Sendotp">Send OTP</string>
    <string name="login">login</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Create new passwords</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_success_message">Successfully updated password</string>
    <string name="forget_password_detail">"Enter phone number to get verification code "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Garage_name">Garage name</string>
    <string name="garage_rating">Garage Rating</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>