<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--ImageVIew to display our Course Image-->
        <ImageView
            android:id="@+id/Garage_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/attalogo" />


        <TextView
            android:id="@+id/Garage_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/Garage_image"
            android:text="@string/Garage_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/garage_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Garage_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/Garage_image"
            android:drawablePadding="2dp"
            android:text="@string/garage_rating"
            app:drawableStartCompat="@drawable/ic_star" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>