<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:transitionName="transition_signup"
    tools:context=".CreateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">


            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:text="Create Account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:transitionName="transition_title_text" />





            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_fullname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signup_username"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_username"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                        app:hintTextColor="@color/black"
                        app:startIconTint="@color/black">


                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null" />


                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/signup_email"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_email"
                            android:textColorHint="@color/black"
                            app:boxStrokeColor="@color/black"
                            app:boxStrokeWidthFocused="2dp"
                            app:endIconMode="clear_text"
                            app:endIconTint="@color/black"
                            app:hintTextColor="@color/black"
                            app:startIconTint="@color/black">


                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="textEmailAddress"
                                android:id="@+id/edit_text_email"
                                android:textColor="@color/black"
                                android:textCursorDrawable="@null" />


                                </com.google.android.material.textfield.TextInputLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/signup_password"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/enter_password"
                                android:textColorHint="@color/black"
                                app:boxStrokeColor="@color/black"
                                app:boxStrokeWidthFocused="2dp"
                                app:endIconTint="@color/black"
                                app:hintTextColor="@color/black"
                                app:passwordToggleEnabled="true"
                                app:passwordToggleTint="@color/black"
                                app:startIconTint="@color/black">


                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:inputType="textPassword"
                                    android:textColor="@color/black"
                                    android:id="@+id/enterpassword"
                                    android:textCursorDrawable="@null" />


                                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Confirm Password"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:id="@+id/confirm_password"
                        android:textCursorDrawable="@null" />


                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radioGrp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="64dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    >
                    <RadioButton
                        android:id="@+id/radioM"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:checked="true"
                        android:layout_weight="1"
                        android:textSize="14dp"
                        android:text="Male"
                        />
                    <RadioButton
                        android:id="@+id/radioF"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:checked="false"
                        android:layout_weight="1"
                        android:textSize="14dp"
                        android:text="Female"
                        />
                </RadioGroup>

                                </LinearLayout>


                                <Button
                                    android:id="@+id/signup_next_button"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="30dp"
                                    android:background="@color/black"
                                    android:elevation="5dp"
                                    android:text="Next"
                                    android:textColor="@color/white"
                                    android:transitionName="transition_next_btn" />


                                <Button
                                    android:id="@+id/signup_login_button"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:background="#00000000"
                                    android:elevation="5dp"
                                    android:text="Already a member? Login"
                                    android:textColor="@color/black"
                                    android:transitionName="transition_login_btn" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />


                                </LinearLayout>


                                </ScrollView>